# dennett-agent-orchestrator

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Justfile  LICENSE.md  README.md  README.ru.md  REPOSITORY_CHECKSUMS.sha256  REPOSITORY_MANIFEST.json  ROADMAP.md  SECURITY.md  VALIDATION.md  agent_orchestrator_final_spec_v2.md  biome.json  design-qa.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rust-toolchain.toml  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  branch-protection.main.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_issue.yml  external_beta_feedback.yml  security_redirect.yml  support_request.yml
.github/workflows/: ci-windows.yml  ci.yml  protocol-compatibility.yml  release.yml
adapters/: AGENTS.md  README.md
adapters/agent-runtimes/: README.md
adapters/browser/: README.md
adapters/computer-use/: README.md
adapters/connectors/: README.md
adapters/local-models/: README.md
adapters/mcp/: README.md
adapters/model-providers/: README.md
adapters/sensors/: README.md
adapters/storage/: README.md
adapters/storage/sqlite/: Cargo.toml  README.md
adapters/storage/sqlite/migrations/: 0001_control_store.sql  0002_m01_runtime_state.sql  0003_m02_project_registry.sql  0004_m02_workspace_journal.sql
adapters/storage/sqlite/src/: lib.rs  project_registry.rs  workspace_journal.rs
adapters/transport/: README.md
adapters/transport/local-ipc/: Cargo.toml  README.md
adapters/transport/local-ipc/src/: auth.rs  client.rs  lib.rs  protocol.rs  service.rs
adapters/transport/local-ipc/src/transport/: mod.rs  windows.rs
adapters/voice/: README.md
apps/desktop/: AGENTS.md  README.md  index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/autogenerated/: cancel_project_turn.toml  close_project_chat.toml  close_system_watch.toml  discard_composer_draft.toml  native_mica_available.toml  open_project_chat.toml  open_system_watch.toml  project_chat.toml  save_composer_draft.toml  send_project_turn.toml
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/system_bridge/: conversation.rs  dto.rs  installation.rs  mod.rs  node_process.rs
apps/mobile/: AGENTS.md  README.md  package.json  tsconfig.json
blog/: AGENTS.md  INDEX.md  README.md
blog/evidence/: M00.yaml  M01.yaml  editorial-review-001-002.md
blog/notes/: M02_WP002_contract_matrix.md  M02_WP004_capture.md  M02_capture.md  README.md  _milestone_capture_template.md
blog/posts/: 000_До_первой_строки_кода.md  001_M00_Репозиторий_научился_не_верить_мне_на_слово.md  002_M01_Чат_который_должен_пережить_закрытое_окно.md
contracts/invariants/: README.md  agent-json-interaction-and-chat.md  agent-json-nodes-and-edges.md  agent-json-top-level-and-bindings.md  orchestrator-user-chat-mcp.md  runtime-adapter.md
contracts/json-schema/: README.md  agent-file.schema.json  agent-json.defs.schema.json  builder-output.schema.json  orchestrator-user-chat-mcp-request.schema.json  orchestrator-user-chat-mcp-response.schema.json  runtime-adapter-capabilities.schema.json  runtime-adapter-event.schema.json  runtime-adapter-request.schema.json  runtime-adapter-result.schema.json  (+1 more)
contracts/typescript/: agent-file.ts  (+4 more)
crates/: AGENTS.md
crates/denet-memory-core/: AGENTS.md  Cargo.toml  README.md
crates/denet-memory-core/src/: lib.rs
crates/dennett-agent-core/: AGENTS.md  Cargo.toml  README.md
crates/dennett-agent-core/src/: fake.rs  lib.rs  runtime.rs
crates/dennett-agent-core/tests/: runtime_conformance.rs
crates/dennett-effect-core/: Cargo.toml  README.md
crates/dennett-effect-core/src/: lib.rs  workspace.rs
crates/dennett-memory-core/: AGENTS.md  Cargo.toml  README.md
crates/dennett-memory-core/src/: lib.rs  session.rs
crates/dennett-observability/: Cargo.toml  README.md
crates/dennett-observability/src/: lib.rs  lifecycle.rs  secure_fs.rs  writer.rs
crates/dennett-observability/tests/: console.rs  drop_accounting.rs  nonblocking.rs  persistence.rs  redaction.rs  startup_transaction.rs
crates/dennett-sync-core/: AGENTS.md  Cargo.toml  README.md
crates/dennett-sync-core/src/: admission.rs  draft.rs  lib.rs  watch.rs
deploy/: README.md
docs/: CHECKSUMS.sha256  FEATURE_AUDIT.md  OPEN_QUESTIONS.md  README.md  TRACEABILITY.md  functionality-learning-guide.md  manifest.json  product-roadmap-and-safety-gates.md
packaging/: README.md
planning/: README.md
protocols/: AGENTS.md  buf.gen.yaml  buf.yaml
schemas/: README.md  autonomous-batch.schema.json  component-descriptor.schema.json  decision-request.schema.json  milestone.schema.json  portable-package-manifest.schema.json  technical-debt.schema.json  test-catalogue.schema.json  work-package-result.schema.json  work-package.schema.json
scripts/: check-architecture-boundaries.js  check-distribution.js  check-packlist.js  check-public-release-foundation.js  check-release-candidate.js  check-stage15-integrated-flow.js  clean-dist.js  run-mem0-tests.js
services/head/: AGENTS.md  Cargo.toml  README.md
services/head/src/: conversation.rs  draft.rs  lib.rs  main.rs  project.rs  session.rs  system.rs  workspace.rs
services/head/tests/: conversation_application.rs  fake_chat.rs  session_restore.rs
services/node/: AGENTS.md  Cargo.toml  README.md
services/node/src/: lib.rs  main.rs  project_fs.rs  project_location.rs  runtime_host.rs  workspace_fs.rs
services/node/tests/: codex_live_e2e.rs  desktop_conversation_e2e.rs  desktop_lifecycle.rs  diagnostic_lifecycle.rs
tests/: README.md
tools/: bootstrap.py  doctor.py  generate_doc_index.py  generate_repository_metadata.py  generate_test_catalogue.py  protocol_codegen.py  run_in_toolchain.py  verify_ci.py  verify_docs.py  verify_planning.py  verify_repo.py  verify_worktree_clean.py
(+516 files in other folders)
