
[workspace]
resolver = "2"
members = [
  "adapters/storage/sqlite",
  "crates/dennett-contracts",
  "crates/dennett-kernel",
  "crates/dennett-agent-core",
  "crates/dennett-memory-core",
  "crates/dennett-trust-core",
  "crates/dennett-effect-core",
  "crates/dennett-sync-core",
  "crates/dennett-observability",
  "services/head",
  "services/node",
  "services/memoryd",
  "services/sensor-worker",
  "tools/dennettctl",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.97"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite-bundled", "migrate"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v7", "serde"] }
