
[workspace]
resolver = "2"
members = [
  "adapters/transport/local-ipc",
  "adapters/storage/sqlite",
  "crates/dennett-contracts",
  "crates/dennett-kernel",
  "crates/dennett-agent-core",
  "crates/dennett-memory-core",
  "crates/dennett-trust-core",
  "crates/dennett-effect-core",
  "crates/dennett-sync-core",
  "crates/dennett-observability",
  "services/head",
  "services/node",
  "services/memoryd",
  "services/sensor-worker",
  "tools/dennettctl",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.97"

[workspace.dependencies]
async-trait = "0.1"
async-stream = "0.3"
futures-core = "0.3"
fs2 = "0.4"
getrandom = "0.3"
hyper-util = { version = "0.1", features = ["tokio"] }
prost = "0.14"
prost-types = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite-bundled", "migrate"] }
subtle = "2"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync", "net", "io-util", "process", "fs"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v7", "serde"] }
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_Pipes",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
] }
