
[project]
name = "dennett-dev"
version = "0.0.0"
requires-python = "==3.13.5"
dependencies = []

[dependency-groups]
dev = [
    "jsonschema>=4.23,<5",
    "pyyaml>=6.0.2,<7",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["services/adapter-host-python/tests", "tools/tests"]
