[package]
name = "denet-memory-core"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
tokio.workspace = true
denet-contracts = { path = "../denet-contracts" }
denet-kernel = { path = "../denet-kernel" }
