[package]
name = "dennett-agent-core"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
dennett-kernel = { path = "../dennett-kernel" }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
