[package]
name = "dennett-effect-core"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
dennett-contracts = { path = "../dennett-contracts" }
