[package]
name = "dennett-memory-core"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
tokio.workspace = true
dennett-contracts = { path = "../dennett-contracts" }
dennett-kernel = { path = "../dennett-kernel" }
