
[package]
name = "dennett-head"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
sha2.workspace = true
thiserror.workspace = true
dennett-agent-core = { path = "../../crates/dennett-agent-core" }
dennett-contracts = { path = "../../crates/dennett-contracts" }
dennett-kernel = { path = "../../crates/dennett-kernel" }
dennett-memory-core = { path = "../../crates/dennett-memory-core" }
dennett-observability = { path = "../../crates/dennett-observability" }
dennett-sync-core = { path = "../../crates/dennett-sync-core" }

[dev-dependencies]
tempfile.workspace = true
dennett-storage-sqlite = { path = "../../adapters/storage/sqlite" }
