[package]
name = "dennett-storage-sqlite"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
dennett-contracts = { path = "../../../crates/dennett-contracts" }
dennett-memory-core = { path = "../../../crates/dennett-memory-core" }
dennett-sync-core = { path = "../../../crates/dennett-sync-core" }

[dev-dependencies]
tempfile.workspace = true

