[package]
name = "dennett-local-ipc"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["client", "server"]
client = []
server = ["dep:dennett-agent-core", "dep:dennett-contracts", "dep:dennett-head", "dep:dennett-memory-core", "dep:dennett-sync-core"]

[dependencies]
getrandom.workspace = true
hyper-util.workspace = true
async-stream.workspace = true
futures-core.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tower.workspace = true
tracing.workspace = true
uuid.workspace = true
dennett-agent-core = { path = "../../../crates/dennett-agent-core", optional = true }
dennett-head = { path = "../../../services/head", optional = true }
dennett-contracts = { path = "../../../crates/dennett-contracts", optional = true }
dennett-memory-core = { path = "../../../crates/dennett-memory-core", optional = true }
dennett-sync-core = { path = "../../../crates/dennett-sync-core", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
dennett-head = { path = "../../../services/head" }
