
[package]
name = "dennett-desktop-shell"
version = "0.1.0"
edition = "2024"
publish = false

# The desktop shell is intentionally built outside the server/domain workspace.
# Its native dependency graph and release cadence are owned by apps/desktop.
[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost-types = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7"] }
dennett-local-ipc = { path = "../../../adapters/transport/local-ipc", default-features = false, features = ["client"] }
dennett-observability = { path = "../../../crates/dennett-observability" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Threading"] }

[dev-dependencies]
dennett-node = { path = "../../../services/node" }
tempfile = "3"
